syntax = "proto3";
package pb;
import "pb/common.proto";

option go_package="./pb";

message Msg {
  oneof Payload {
    Prepare prepare = 1;
    PrepareVote prepareVote = 2;
    PreCommit preCommit = 3;
    PreCommitVote preCommitVote = 4;
    Commit commit = 5;
    CommitVote commitVote = 6;
    Decide decide = 7;
    NewView newView = 8;
    Request request = 9;
    Reply reply = 10;
  }
//   string senderAddress = 11;
}

message Prepare {
  Block curProposal = 1;
  QuorumCert highQC = 2;
  uint64 viewNum = 3;
}

message PrepareVote {
  bytes blockHash = 1;
  QuorumCert qc = 2;
  bytes partialSig = 3;
  uint64 viewNum = 4;
}

message PreCommit {
  QuorumCert prepareQC = 1;
  uint64 viewNum = 2;
}

message PreCommitVote {
  bytes blockHash = 1;
  QuorumCert qc = 2;
  bytes partialSig = 3;
  uint64 viewNum = 4;
}

message Commit {
  QuorumCert preCommitQC = 1;
  uint64 viewNum = 2;
}

message CommitVote {
  bytes blockHash = 1;
  QuorumCert qc = 2;
  bytes partialSig = 3;
  uint64 viewNum = 4;
}

message Decide {
  QuorumCert commitQC = 1;
  uint64 viewNum = 2;
}

message NewView {
  QuorumCert prepareQC = 1;
  uint64 viewNum = 2;
}
